# hello-v8

./: CMakeLists.txt  README.md  hello.cc  logger.cc  script.js
cmake/: FindUV.cmake  FindV8.cmake
libuv/: default-loop.c  helloworld.c  idle-basic.c  idle-compute.c  ref-timer.c
